Added definition of omega in unl.tex and unl.pdf

--- a/doc/unl.tex
+++ b/doc/unl.tex
@@ -30,7 +30,8 @@
 	&= \tilde{u}_{nl} + (-1)^{\deltaF+ l}\tilde{u}_{nl}^*, \\
 	\tilde{u}_{nl}^\alpha &\equiv \frac{1}{\sqrt{2}} \int_{0}^{1} d x~e^{\mathi \pi \{n+(1/2)\deltaF\}(x+1)} u^\alpha_l(x),\\
 	&= \sum_s  \frac{\sqrt{\Delta x_s}}{2} \sqrt{p+\frac{1}{2}}e^{i\omega((x_{s+1}+x_s)/2+1)} \int_{-1}^1 dxP_p(x)e^{i\omega \Delta x_s/2 x}.\\
-	\int_{-1}^1 dx P_l(x)e^{ia} &= 2i^l j_l(a).
+	\int_{-1}^1 dx P_l(x)e^{ia} &= 2i^l j_l(a),\\
+        \omega &\equiv \pi \{n+(1/2)\deltaF\}.
 \end{align}
 
 \end{document}
