Updated samples for Julia

--- a/sample/how_to_use_from_Julia.ipynb
+++ b/sample/how_to_use_from_Julia.ipynb
@@ -4,22 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PyObject <module 'irbasis' from '/home/shinaoka/.local/lib/python3.8/site-packages/irbasis-2.2.3-py3.8.egg/irbasis/__init__.py'>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "using PyCall\n",
     "\n",
-    "const irbasis = pyimport(\"irbasis\")"
+    "const irbasis = pyimport(\"irbasis\");"
    ]
   },
   {
@@ -30,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "PyObject <irbasis.irbasis.basis object at 0x14d6b80b0220>"
+       "PyObject <irbasis.irbasis.basis object at 0x153afb292220>"
       ]
      },
      "execution_count": 2,
